<resources>
    <string name="app_name">HowsAir</string>
    <string name="start_searching">Start Searching</string>
    <string name="stop_searching">Stop Searching</string>
    <string name="make_request">Make Request</string>
    <string name="logout">Cerrar sesión</string>
    <string name="Scan_QR">Vincular sensor con QR</string>
    <string name="Scan_QR_NO_CAMERA">Vincular sin cámara</string>
    <string name="Find_Node">Encontrar nodo</string>
    <string name="Stop_Find_Node">Parar de buscar</string>
    <string name="change_pass">Cambiar contraseña</string>
    <string name="receive_code">Recibir código</string>
    <string name="back_button">return</string>
    <string name="robust_pass_explanation">Al menos 8 caracteres, incluidas letras mayúsculas y minúsculas, números y caracteres especiales.</string>
    <string name="write_new_pass">Escribe tu nueva contraseña</string>
    <string name="email">Correo electrónico</string>
    <string name="verify_pass">Verifica la contraseña</string>
    <string name="new_pass">Nueva contraseña</string>
    <string name="write_email_receive_code">Escribe tu correo electrónico para recibir un código y poder cambiar tu contraseña</string>
    <string name="verification_code">Código de verificación</string>
    <string name="send">Enviar</string>
    <string name="logo">HowsAir</string>
    <string name="login_salute">Bienvenido</string>
    <string name="forgotPassword">¿Has olvidado tu contraseña?</string>
    <string name="PrivacyText">Al continuar, aceptas nuestros Términos de servicio y Política de Privacidad.</string>
    <string name="noaccount">¿No tienes una cuenta?</string>
    <string name="BuyNode">Compra nuestro nodo Breeze</string>
    <string name="QrExplanation">Escanea el QR de la caja para vincular tu sensor</string>
    <string name="ManualNodeLinkExplanation">Introduce el código del sensor incluido en la caja</string>
    <string name="ManualLinkNodeHelper">Código numérico de 5 cifras, sin letras ni símbolos, con este formato \"00000\"</string>
    <string name="LinkNode">Vincular Sensor</string>
    <string name="NoCode">¿No encuentras el código?</string>
    <string name="ContactSupport">Contacta con soporte</string>
    <string name="ProfileText">Perfil</string>
    <string name="textViewProfileEmail">testemail@example.com</string>
    <string name="ChangePassProfile">Cambiar Contraseña</string>
    <string name="SaveChanges">Guardar Cambios</string>
    <string name="SignOut">Cerrar Sesión</string>
    <string name="write_old_pass">Escribe tu contraseña actual</string>
    <string name="current_pass">Contraseña actual</string>
    <string name="succesful_noke_link">¡Tu Breeze ha sido vinculado con exito!</string>
    <string name="wrong_password">Contraseña incorrecta</string>
    <string name="mismatch_passwords">Las contraseñas no coinciden</string>
    <string name="your_node">Tu nodo hoy</string>
    <string name="last_measurement">Última medida</string>
    <string name="Movement">Recorrido</string>
    <string name="text_goal">Objetivo mensual:</string>
    <string name="bad_measurement">Ver medida peligrosa</string>
    <string name="today_air_quality">Media hoy:</string>
    <string name="remember_turn_on">¡Recuerda encender el nodo!</string>
    <string name="objective_rewards_tile">Completa el objetivo y escoje uno de los premios</string>
    <string name="Terms_Conditions">Términos, condiciones y política de privacidad\nFecha de actualización: Octubre 2024\n\n1. Introducción\nBienvenido a HowsAir, una plataforma dedicada al monitoreo de la calidad del aire en tiempo real. Al registrarse y utilizar nuestros servicios, usted acepta los términos, condiciones y políticas de privacidad aquí detallados. Si no está de acuerdo con ellos, le recomendamos no utilizar la Plataforma.\n\nTérminos y condiciones\n\n2. Definiciones\nUsuario registrado: Persona con cuenta en la Plataforma.\n\nNodos HowsAir: Dispositivos que miden la calidad del aire en tiempo real.\n\nServicios: Monitoreo en tiempo real, compra de nodos y otros servicios proporcionados por HowsAir.\n\n3. Registro y cuentas\nEl usuario debe proporcionar información precisa al crear su cuenta y es responsable de mantener la seguridad de sus credenciales. Cualquier actividad realizada con su cuenta será de su responsabilidad.\n\n4. Uso de los servicios\nLos usuarios pueden:\n\nVer mapas de calidad del aire en tiempo real.\nComprar nodos para medir la contaminación en su ubicación exacta.\n5. Compra de nodos (Breeze)\nAl realizar compras en la Plataforma, el usuario se compromete a proporcionar datos veraces. HowsAir no almacena detalles de pago, y estos son gestionados por un procesador de pagos externo.\n\n6. Exactitud de la información\nLos datos proporcionados sobre la calidad del aire se actualizan constantemente, pero no garantizamos la exactitud absoluta debido a factores externos.\n\n7. Responsabilidad del usuario\nEl usuario se compromete a no utilizar HowsAir de manera ilícita o que afecte a terceros.\n\n8. Limitación de responsabilidad\nHowsAir no será responsable de:\n\nDaños derivados del uso de la Plataforma o de los nodos.\nLa disponibilidad continua o exactitud de los datos de la calidad del aire.\n\n9. Propiedad intelectual\nTodos los contenidos de la Plataforma son propiedad de HowsAir o sus licenciantes. Está prohibido copiar, distribuir o modificar sin consentimiento.\n\n10. Modificaciones\nHowsAir puede actualizar estos términos en cualquier momento. Los cambios importantes serán notificados.\n\n11. Ley Aplicable\nEste acuerdo se rige por las leyes de España. Las disputas se resolverán en los tribunales correspondientes.\n\nPolítica de privacidad\n\n12. Datos personales recogidos\nHowsAir recoge y almacena los siguientes tipos de datos personales:\n\nInformación de cuenta: Nombre, correo electrónico y datos de inicio de sesión.\nInformación de pago: Procesada por terceros, no almacenamos detalles de tarjetas.\nDatos de ubicación: Para proporcionar datos precisos sobre la calidad del aire en tiempo real.\nDatos del dispositivo: Información técnica sobre su dispositivo y navegador.\n\n13. Uso de la información recogida\nUtilizamos los datos personales para:\n\nProporcionar y mejorar nuestros servicios.\nEnviar notificaciones relacionadas con la cuenta o servicios.\nPersonalizar la experiencia del usuario, como mostrar la calidad del aire en ubicaciones específicas.\n\n14. Compartir información con terceros\nNo compartimos sus datos personales con terceros, excepto en los siguientes casos:\n\nProcesadores de pago para compras en la Plataforma.\nCumplimiento de obligaciones legales.\nEmpresas de análisis de datos para mejorar el servicio, siempre anonimizando la información.\n\n15. Retención de datos\nSus datos se mantendrán durante el tiempo necesario para los fines descritos en esta política o conforme lo exija la ley.\n\n16. Derechos del usuario\nComo usuario de HowsAir, tiene derecho a:\n\nAcceder, modificar o eliminar su información personal.\nSolicitar la portabilidad de sus datos.\nOponerse al tratamiento de sus datos en ciertos casos.\nPara ejercer estos derechos, puede contactarnos en howsair@gmail.com.\n\n17. Cookies\nHowsAir utiliza cookies para mejorar su experiencia en la Plataforma. Puede gestionar las preferencias de cookies desde su navegador.\n\n18. Seguridad\nAdoptamos medidas técnicas y organizativas para proteger sus datos personales contra accesos no autorizados, pérdidas o modificaciones. Sin embargo, ningún sistema es completamente seguro, y no podemos garantizar la seguridad absoluta de sus datos.\n\n19. Enlaces a sitios externos\nNuestra Plataforma puede contener enlaces a sitios web de terceros. HowsAir no se responsabiliza por las prácticas de privacidad de dichos sitios.\n\n20. Cambios en la política de privacidad\nHowsAir puede modificar esta política de privacidad en cualquier momento. Las actualizaciones se notificarán a través de la Plataforma o por correo electrónico.\n\n21. Contacto\nPara consultas relacionadas con estos términos y la política de privacidad, contáctenos en howsair@gmail.com.\n\nAl continuar utilizando HowsAir, usted confirma que ha leído, comprendido y aceptado estos términos, condiciones y políticas de privacidad.</string>
</resources>