<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Back Button -->

    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/ic_back_arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Title -->
    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="110dp"
        android:text="@string/change_pass"
        android:textAppearance="@style/TextAppearance.App.Heading1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Subtitle -->

    <!-- Email Input -->

    <TextView
        android:id="@+id/tvSubtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="40dp"
        android:text="@string/write_email_receive_code"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.App.Paragraph"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilEmail"
        style="@style/Widget.App.TextInputLayout"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSubtitle"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmailFP"
            style="@style/Widget.App.TextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            tools:layout_editor_absoluteX="123dp"
            tools:layout_editor_absoluteY="32dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Verification Code Input -->

    <Button
        android:id="@+id/btnRequestCodeFP"
        style="@style/Widget.App.Button.Primary"
        android:layout_marginTop="20dp"
        android:text="@string/receive_code"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilEmail" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilVerificationCode"
        style="@style/Widget.App.TextInputLayout"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRequestCodeFP">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etVerificationCodeFP"
            style="@style/Widget.App.TextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/verification_code"
            android:inputType="number"
            android:textColor="@color/black"
            tools:layout_editor_absoluteX="108dp"
            tools:layout_editor_absoluteY="89dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Send Button (Disabled) -->
    <Button
        android:id="@+id/btnSendCodeFP"
        style="@style/Widget.App.Button.Disabled"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="180dp"
        android:text="@string/send"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilVerificationCode" />

</androidx.constraintlayout.widget.ConstraintLayout>