<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Back Button -->

    <TextView
        android:id="@+id/tvLightSubtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="45dp"
        android:text="@string/robust_pass_explanation"
        android:textAlignment="viewStart"
        android:textAppearance="@style/TextAppearance.App.Paragraph"
        android:textColor="@color/gray_secondary"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilEmail" />

    <!-- Title -->
    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="110dp"
        android:text="@string/change_pass"
        android:textAppearance="@style/TextAppearance.App.Heading1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Subtitle -->

    <!-- Email Input -->

    <TextView
        android:id="@+id/tvSubtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="40dp"
        android:text="@string/write_new_pass"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.App.Paragraph"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilEmail"
        style="@style/Widget.App.TextInputLayout"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSubtitle"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmailFP"
            style="@style/Widget.App.TextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/new_pass"
            android:inputType="textEmailAddress"
            tools:layout_editor_absoluteX="123dp"
            tools:layout_editor_absoluteY="32dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnRequestCodeFP"
        style="@style/Widget.App.Button.Primary"
        android:layout_marginBottom="180dp"
        android:text="@string/change_pass"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilVerificationCode"
        style="@style/Widget.App.TextInputLayout"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLightSubtitle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etVerificationCodeFP"
            style="@style/Widget.App.TextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/verify_pass"
            android:inputType="number"
            tools:layout_editor_absoluteX="108dp"
            tools:layout_editor_absoluteY="89dp" />

    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>