<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/Logo"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="5dp"
        android:text="@string/logo"
        android:textAppearance="@style/TextAppearance.App.Heading1"
        android:textColor="@color/primary"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="@+id/ivLogo"
        app:layout_constraintStart_toEndOf="@+id/ivLogo" />

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="-20dp"
        android:layout_marginTop="48dp"
        android:contentDescription="Logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.291"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/howsair_logo" />

    <TextView
        android:id="@+id/ManualNodeLinkExplanation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="60dp"
        android:text="@string/ManualNodeLinkExplanation"
        android:textAlignment="center"
        android:alpha="0.5"
        android:textAppearance="@style/TextAppearance.App.Heading3"
        android:textSize="20sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivLogo" />

    <TextView
        android:id="@+id/ManualLinkNodeHelper"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:text="@string/ManualLinkNodeHelper"
        android:textAlignment="textStart"
        android:textAppearance="@style/TextAppearance.App.Paragraph"
        android:textSize="13sp"
        android:alpha="0.4"
        app:layout_constraintEnd_toEndOf="@+id/tilNodeId"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tilNodeId"
        app:layout_constraintTop_toBottomOf="@+id/tilNodeId" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilNodeId"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="24dp"
        android:alpha="0.6"
        android:hint="Código"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:helperTextTextAppearance="@style/TextAppearance.App.Heading3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ManualNodeLinkExplanation">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nodeIdInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="0.6"
            android:inputType="number"
            android:maxLength="5"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.App.Heading3"
            android:textSize="16sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/confirmButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="16dp"
        android:padding="12dp"
        android:text="@string/LinkNode"
        android:textAppearance="@style/TextAppearance.App.Heading3"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ManualLinkNodeHelper" />

    <TextView
        android:id="@+id/Noaccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:alpha="0.4"
        android:text="@string/NoCode"
        android:textAppearance="@style/TextAppearance.App.Heading3"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.09"
        app:layout_constraintStart_toStartOf="@+id/confirmButton"
        app:layout_constraintTop_toBottomOf="@+id/confirmButton" />

    <TextView
        android:id="@+id/BuyNode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/ContactSupport"
        android:textAppearance="@style/TextAppearance.App.Heading3"
        android:textColor="@color/primary"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/Noaccount"
        app:layout_constraintTop_toBottomOf="@+id/Noaccount" />

</androidx.constraintlayout.widget.ConstraintLayout>